tests/integration/snapshots/integration__commands__check__unexpected_escaped_character.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---

stdout ---

stderr ---
error: unexpected character `\u000B`. expected start of a json value
 --> stdin:1:1
  |
1 | â‹
  | ^
